# yandex_translate_rust

./: .gitignore  .travis.yml  Cargo.toml  Jenkinsfile  README.md
src/: lib.rs  main.rs
src/yandex_translate/: answer.rs  client.rs  code_errors.rs  mod.rs  result.rs
tests/: lib.rs
yandex_translate_cli/: Cargo.toml
